# flaskapi_task

./: .gitignore  FASTAPI_LEARNING_NOTES.md  GITHUB_ACTIONS_LEARNING.md  README.md  SHELL_SCRIPT_LEARNING.md  conftest.py  main.py  pyproject.toml  test.sh  test_simple.py  일차별_과제_정리.md
.github/workflows/: ci.yml
app/: __init__.py
app/configs/: __init__.py  base.py  database.py
app/middleware/: __init__.py  auth.py
app/models/: base.py  follows.py  likes.py  movies.py  reviews.py  users.py
app/routers/: likes.py  movies.py  notifications.py  reviews.py  users.py
app/schemas/: likes.py  movies.py  reviews.py  users.py
app/services/: auth.py  jwt.py
app/signals/: __init__.py  follow_signals.py  review_like_signals.py
app/tests/: __init__.py  test_movie_router.py  test_user_router.py
app/utils/: file.py  websocket.py
